--- a/src/main/resources/handlebars/python/api.mustache
+++ b/src/main/resources/handlebars/python/api.mustache
@@ -29,7 +29,7 @@ class {{classname}}(object):
 {{#contents}}
 
     {{#if ../vendorExtensions.x-is-deprecated}}
-    @deprecated("You are using a deprecated API operation: {{operationId}}")
+    @deprecated("You are using a deprecated API operation: {{operationId}}.{{#if ../vendorExtensions.x-alternative-operation-id}} Use {{../vendorExtensions.x-alternative-operation-id}} instead.{{/if}}")
     {{/if}}
     def {{operationId}}(self, {{#sortParamsByRequiredFlag}}{{#parameters}}{{#required}}{{paramName}}, {{/required}}{{/parameters}}{{/sortParamsByRequiredFlag}}**kwargs):  # noqa: E501
         """{{#summary}}{{{.}}}{{/summary}}{{^summary}}{{operationId}}{{/summary}}  # noqa: E501
@@ -55,7 +55,7 @@ class {{classname}}(object):
                  If the method is called asynchronously,
                  returns the request thread.
         {{#if ../vendorExtensions.x-is-deprecated}}
-        deprecated
+        Deprecated.{{#if ../vendorExtensions.x-alternative-operation-id}} Use {{../vendorExtensions.x-alternative-operation-id}} instead.{{/if}}
         {{/if}}
         """
         kwargs['_return_http_data_only'] = True
@@ -66,7 +66,7 @@ class {{classname}}(object):
             return data
 
     {{#if ../vendorExtensions.x-is-deprecated}}
-    @deprecated("You are using a deprecated API operation: {{operationId}}_with_http_info")
+    @deprecated("You are using a deprecated API operation: {{operationId}}_with_http_info.{{#if ../vendorExtensions.x-alternative-operation-id}} Use {{../vendorExtensions.x-alternative-operation-id}}_with_http_info instead.{{/if}}")
     {{/if}}
     def {{operationId}}_with_http_info(self, {{#sortParamsByRequiredFlag}}{{#parameters}}{{#required}}{{paramName}}, {{/required}}{{/parameters}}{{/sortParamsByRequiredFlag}}**kwargs):  # noqa: E501
         """{{#summary}}{{{.}}}{{/summary}}{{^summary}}{{operationId}}{{/summary}}  # noqa: E501
@@ -92,7 +92,7 @@ class {{classname}}(object):
                  If the method is called asynchronously,
                  returns the request thread.
         {{#if ../vendorExtensions.x-is-deprecated}}
-        deprecated
+        Deprecated.{{#if ../vendorExtensions.x-alternative-operation-id}} Use {{../vendorExtensions.x-alternative-operation-id}}_with_http_info instead.{{/if}}
         {{/if}}
         """
 
