--- a/src/main/resources/handlebars/python/api.mustache
+++ b/src/main/resources/handlebars/python/api.mustache
@@ -65,6 +65,40 @@ class {{classname}}(object):
         deprecated
         {{/if}}
         """
+        all_params = [{{#parameters}}'{{paramName}}'{{#hasMore}}, {{/hasMore}}{{/parameters}}]  # noqa: E501
+        all_params.append('async_req')
+        all_params.append('_return_http_data_only')
+        all_params.append('_preload_content')
+        all_params.append('_request_timeout')
+
+        params = locals()
+        for key, val in six.iteritems(params['kwargs']):
+            if key not in all_params:
+                raise TypeError(
+                    "Got an unexpected keyword argument '%s'"
+                    " to method {{operationId}}" % key
+                )
+            params[key] = val
+        del params['kwargs']
+{{#pathParams}}
+        {{#deprecated}}
+        if '{{paramName}}' in params:
+            warnings.warn(f"The API operation '{{operationId}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
+        {{/deprecated}} 
+{{/pathParams}}
+{{#queryParams}}
+        {{#deprecated}}
+        if '{{paramName}}' in params:
+            warnings.warn(f"The API operation '{{operationId}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
+        {{/deprecated}}            
+{{/queryParams}}
+{{#headerParams}}
+        {{#deprecated}}
+        if '{{paramName}}' in params:
+            warnings.warn(f"The API operation '{{operationId}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
+        {{/deprecated}}
+{{/headerParams}}
+
         kwargs['_return_http_data_only'] = True
         if kwargs.get('async_req'):
             return self.{{operationId}}_with_http_info({{#sortParamsByRequiredFlag}}{{#parameters}}{{#required}}{{paramName}}, {{/required}}{{/parameters}}{{/sortParamsByRequiredFlag}}**kwargs)  # noqa: E501
@@ -173,8 +207,7 @@ class {{classname}}(object):
             path_params['{{baseName}}'] = params['{{paramName}}']{{#isListContainer}}  # noqa: E501
             collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isListContainer}}  # noqa: E501
             {{#deprecated}}
-            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
-            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=3) # noqa: E501
+            warnings.warn(f"The API operation '{{operationId}}_with_http_info' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
             {{/deprecated}} 
 {{/pathParams}}
 
@@ -184,8 +217,7 @@ class {{classname}}(object):
             query_params.append(('{{baseName}}', params['{{paramName}}'])){{#isListContainer}}  # noqa: E501
             collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isListContainer}}  # noqa: E501
             {{#deprecated}}
-            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
-            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=3) # noqa: E501
+            warnings.warn(f"The API operation '{{operationId}}_with_http_info' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
             {{/deprecated}}            
 {{/queryParams}}
 
@@ -195,8 +227,7 @@ class {{classname}}(object):
             header_params['{{baseName}}'] = params['{{paramName}}']{{#isListContainer}}  # noqa: E501
             collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isListContainer}}  # noqa: E501
             {{#deprecated}}
-            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
-            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=3) # noqa: E501
+            warnings.warn(f"The API operation '{{operationId}}_with_http_info' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
             {{/deprecated}}
 {{/headerParams}}
 
