--- a/src/main/resources/handlebars/python/api.mustache
+++ b/src/main/resources/handlebars/python/api.mustache
@@ -47,7 +47,7 @@ class {{classname}}(object):
 {{/sortParamsByRequiredFlag}}
         >>> result = thread.get()
 
-        :param async_req bool
+        :param bool async_req:
 {{#parameters}}
         :param {{dataType}} {{paramName}}:{{#description}} {{{description}}}{{/description}}{{#required}} (required){{/required}}{{#optional}}(optional){{/optional}}
 {{/parameters}}
@@ -55,7 +55,8 @@ class {{classname}}(object):
                  If the method is called asynchronously,
                  returns the request thread.
         {{#if ../vendorExtensions.x-is-deprecated}}
-        Deprecated.{{#if ../vendorExtensions.x-alternative-operation-id}} Use {{../vendorExtensions.x-alternative-operation-id}} instead.{{/if}}
+
+        Deprecated.{{#if ../vendorExtensions.x-alternative-operation-id}} Use :meth:`{{../vendorExtensions.x-alternative-operation-id}}` instead.{{/if}}
         {{/if}}
         """
         kwargs['_return_http_data_only'] = True
@@ -84,7 +85,7 @@ class {{classname}}(object):
 {{/sortParamsByRequiredFlag}}
         >>> result = thread.get()
 
-        :param async_req bool
+        :param bool async_req:
 {{#parameters}}
         :param {{dataType}} {{paramName}}:{{#description}} {{{description}}}{{/description}}{{#required}} (required){{/required}}{{#optional}}(optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/optional}}
 {{/parameters}}
@@ -92,7 +93,8 @@ class {{classname}}(object):
                  If the method is called asynchronously,
                  returns the request thread.
         {{#if ../vendorExtensions.x-is-deprecated}}
-        Deprecated.{{#if ../vendorExtensions.x-alternative-operation-id}} Use {{../vendorExtensions.x-alternative-operation-id}}_with_http_info instead.{{/if}}
+
+        Deprecated.{{#if ../vendorExtensions.x-alternative-operation-id}} Use :meth:`{{../vendorExtensions.x-alternative-operation-id}}_with_http_info` instead.{{/if}}
         {{/if}}
         """
 
